update dependencies & refactorings (#57)
* update dependencies & QueryRestriction refactorings

* WebSearchQueryBuilder refactorings

* QueryRestriction use analyzer

* replace StringBuilder#isEmpty

* fix range queries